--- a/package.json
+++ b/package.json
@@ -2,23 +2,30 @@
   "name": "pokemon-api",
   "description": "",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "build/main/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc-watch --noClear -p tsconfig.build.json --onSuccess 'node --inspect build/main/server.js'",
+    "build": "rm -r build && tsc -p ./tsconfig.build.json",
+    "test": "jest --runInBand --silent --detectOpenHandles",
+    "test:verbose": "jest --runInBand",
+    "test:watch": "npm run test -- --watch",
+    "test:ci": "npm run test -- --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
-    "jest": "^29.5.0",
+    "module-alias": "^2.2.2",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.9.1",
     "typeorm": "^0.3.12",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "eslint": "^8.37.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -31,7 +38,14 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-unicorn": "^46.0.0",
-    "prettier": "^2.8.3"
+    "jest": "^29.5.0",
+    "prettier": "^2.8.3",
+    "ts-jest": "^29.1.0",
+    "ts-node-dev": "^2.0.0",
+    "tsc-watch": "^6.0.0"
+  },
+  "_moduleAliases": {
+    "@": "build"
   },
   "keywords": [],
   "author": "",
