--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "sonarjs"
   ],
   "rules": {
+    "import/no-unresolved": "off",
     "import/extensions": "off",
     "class-methods-use-this": "off",
     "no-useless-constructor": "off"
