feat: complete implementation of inversify and typeorm

--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "description": "",
   "version": "1.0.0",
   "main": "build/main/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "tsc-watch --noClear -p tsconfig.build.json --onSuccess 'node --inspect build/main/server.js'",
-    "build": "rm -r build && tsc -p ./tsconfig.build.json",
+    "migrations:run": "typeorm-ts-node-esm migration:run -- -d ./src/infra/database/datasource.ts",
+    "dev": "node --inspect build/main/server.js",
+    "build": "tsc -p ./tsconfig.build.json && tsc-alias -p ./tsconfig.build.json",
     "test": "jest --runInBand --silent --detectOpenHandles",
     "test:verbose": "jest --runInBand",
     "test:watch": "npm run test -- --watch",
@@ -16,8 +18,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "inversify": "^6.0.1",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.5",
     "typeorm": "^0.3.12",
     "typescript": "^5.0.3"
   },
