--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "ts-node-esm -r tsconfig-paths/register src/main/server.ts",
     "build": "tsc -p ./tsconfig.build.json && tsc-alias -p ./tsconfig.build.json",
     "test:unit": "jest --runInBand --silent --detectOpenHandles --config ./jest.unit.config.ts",
+    "test:unit:coverage": "npm run test:unit -- --coverage",
     "test:integration": "node --experimental-vm-modules -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand --detectOpenHandles --config ./jest.integration.config.json"
   },
   "dependencies": {
